--- a/style.css
+++ b/style.css
@@ -65,3 +65,72 @@ img{
 .clear {
   clear:both;
 }
+
+/*
+==================================================
+R E S P O N S I V E
+==================================================
+*/
+
+/*
+---------------
+Fino a 320px
+---------------
+*/
+
+@media screen and (max-width: 320px) {
+
+  .row {
+    width: calc(100% - 40px);
+    margin-top: 32px;
+    padding: 20px;
+  }
+
+  /* BLOCCO LEZIONI */
+  #lezioni .row > .left, #lezioni .row > .right{
+    width: 100%;
+    float: none;
+  }
+
+  #lezioni .row > .left{
+    margin-bottom: 32px;
+  }
+
+  #lezioni .row img {
+    /* per centrare orizzontalmente */
+    max-width: 80%;
+  }
+
+  /* BLOCCO STEPS */
+  #steps .row > .left,
+  #steps .row > .central,
+  #steps .row > .right{
+    float: none;
+    width: 100%;
+  }
+
+  #steps .row > .left,
+  #steps .row > .central {
+    margin-bottom: 32px;
+  }
+
+  /* BLOCCO PERCHE */
+  #why .row > .first,
+  #why .row > .second,
+  #why .row > .third {
+    width: 100%;
+    margin-top: 32px;
+  }
+
+  #why .row img {
+    padding:30px;
+    width: 30%;
+  }
+
+  /* COMMON */
+
+  img {
+    height: auto;
+  }
+
+}
