--- a/bonus/style2.css
+++ b/bonus/style2.css
@@ -1,5 +1,5 @@
 .row {
-  width: 992px;
+  max-width: 992px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 100px;
@@ -18,6 +18,7 @@
   display: block;
   margin-right: auto;
   margin-left: auto;
+  max-height: 150px;
 }
 
 #lezioni {
@@ -35,7 +36,6 @@
   border-radius: 45px;
 }
 
-/* BLOCCO STEPS */
 #steps .row > div:hover {
   background: rgba(65, 138, 201, 0.15);
   cursor: cell;
@@ -46,22 +46,29 @@
 }
 
 /* BLOCCO PERCHE */
-#why {
-  text-align: center;
+#why h1 {
+  /* text-align: center; */
+  padding: 32px 64px;
+  background: #ff0;
 }
 
 #why .row > .first,
 #why .row > .second,
 #why .row > .third {
-  width: 100%;
-  margin-bottom: 32px;
+  max-width: 70%;
+  margin: 0 auto 32px;
   padding: 20px;
+  position: relative;
 }
 
 #why .row img {
   background-color:#428bca;
   border-radius:50%;
-  padding:32px
+  margin-right: 24px;
+  padding:12px;
+  display: inline-block;
+  max-width: 50px;
+  float: left;
 }
 
 /* COMMON */
@@ -97,7 +104,7 @@ h1::first-letter {
 }
 
 img{
-  height: 200px;
+  height: auto;
 }
 
 hr {
@@ -113,6 +120,100 @@ hr {
 R E S P O N S I V E
 ==================================================
 */
+
+
+
+/*
+---------------
+Fino a 768px
+---------------
+*/
+
+@media screen and (min-width: 321px) and (max-width: 768px) {
+
+  .row {
+    width: calc(100% - 40px);
+    margin-top: 32px;
+    padding: 20px;
+  }
+
+  /* BLOCCO LEZIONI */
+  #lezioni .row > .left, #lezioni .row > .right{
+    width: 100%;
+    float: none;
+  }
+
+  #lezioni .row > .left{
+    margin-bottom: 32px;
+  }
+
+  #lezioni .row img {
+    /* per centrare orizzontalmente */
+    max-width: 80%;
+  }
+
+  /* BLOCCO STEPS */
+  #steps .row > .left,
+  #steps .row > .central {
+    float: left;
+    width: calc(50% - 40px);
+  }
+
+  #steps .row > .right {
+    width: 100%;
+    margin: 0;
+  }
+
+  #steps .row > div:hover {
+    background: rgba(65, 138, 201, 0.15);
+    cursor: cell;
+  }
+
+  #steps{
+    text-align: center;
+  }
+
+  /* BLOCCO PERCHE */
+  #why {
+    text-align: center;
+  }
+
+  #why h1 {
+    padding: 32px 0;
+  }
+
+  #why .row > .first,
+  #why .row > .second,
+  #why .row > .third {
+    width: 100%;
+    margin-top: 32px;
+    padding: 0;
+  }
+
+  #why .row img {
+    background-color:#428bca;
+    border-radius:50%;
+    margin-right: 0;
+    padding:12px;
+    display: block;
+    max-width: 80px;
+    float: none;
+    margin: 0 auto;
+  }
+
+  #why .row hr {
+    margin-top: 32px;
+  }
+
+  /* COMMON */
+
+  img {
+    height: auto;
+  }
+
+}
+
+
 
 /*
 ---------------
@@ -149,6 +250,7 @@ Fino a 320px
   #steps .row > .right{
     float: none;
     width: 100%;
+    margin: 0;
   }
 
   #steps .row > .left,
@@ -157,15 +259,26 @@ Fino a 320px
   }
 
   /* BLOCCO PERCHE */
+  #why {
+    text-align: center;
+  }
+
+  #why h1 {
+    padding: 32px 0;
+  }
+
   #why .row > .first,
   #why .row > .second,
   #why .row > .third {
-    width: 100%;
+    max-width: 100%;
     margin-top: 32px;
+    padding: 0;
   }
 
   #why .row img {
-    padding:30px;
+    float: none;
+    padding:10px;
+    margin-right: 0;
     width: 30%;
   }
 
